# spark-fork

./: .gitattributes  .gitignore  .mise.toml  CLAUDE.md  Dockerfile  GEMINI.md  MAINTAINERS  run-everything.sh  so.template.config.yaml
.claude/: CLAUDE.md  settings.json
.claude-plugin/: plugin.json
.claude/hooks/: rename-plan.sh
.claude/skills/resolving-rebase-conflicts/: SKILL.md
.github/workflows/: js-sdk.yml  test-release-sync.yaml
docker/: operator.config.yaml
docs/plans/: 2026-03-12-token-transaction-integration-test-gaps.md
protos/: frost.proto  gossip.proto  multisig.proto  spark.proto  spark_internal.proto  spark_token.proto  spark_token_internal.proto  spark_token_legacy.proto
public/actions/js-sdk-checks/: action.yml
public/actions/js-sdk-unit-test/: action.yml
schemas/: ssp_2025_03_19_schema.graphql  ssp_rc_schema.graphql
sdks/js/: .yarnrc.yml  README.md  package.json  postinstall.sh  turbo.json
sdks/js/.changeset/: add-wallet-cleanup.md  quiet-bare-stream-handles.md
signer/: Cargo.toml
signer/spark-frost-signer/src/: server.rs
signer/spark-frost/src/: lib.rs  signing.rs
signer/spark-token-primitives/: Cargo.toml  README.md  build.rs  publish.sh
signer/spark-token-primitives-uniffi/: Cargo.toml  README.md  build.rs
signer/spark-token-primitives-uniffi/spark-token-primitives-python/: MANIFEST.in  README.md  setup.py
signer/spark-token-primitives-uniffi/spark-token-primitives-python/scripts/: generate-linux.sh  generate-macos-arm64.sh  generate-macos-x86_64.sh
signer/spark-token-primitives-uniffi/spark-token-primitives-python/src/spark_token_primitives/: __init__.py  spark_token_primitives.py
signer/spark-token-primitives-uniffi/src/: lib.rs  spark_token_primitives.udl
signer/spark-token-primitives/src/: invoice.rs  lib.rs  proto.rs  token_transaction.rs
signer/spark-token-primitives/src/invoice/: tests.rs
spark/: .air.toml  .gitignore  .golangci.yml  .mise.toml  CLAUDE.md  constant.go  go.mod  go.sum
spark/cmd/dbseed/: CLAUDE.md  README.md  config.go  generator.go  main.go  profiles_test.go  seed.go
spark/common/: bitcoin.go  connection.go  connection_test.go  spark_address.go  spark_address_test.go  token_invoice_canonical_encoding_cross_language_json_test.go
spark/common/bitcoin_transaction/: htlc.go  validation.go  validation_test.go
spark/common/btcnetwork/: network.go  network_test.go
spark/common/keys/: jwt_pubkey.go  jwt_pubkey_test.go
spark/common/logging/: proto_test.go  table.go
spark/common/multisig/: multisig_identifier.go  multisig_identifier_test.go
spark/common/protohash/: partial_token_transaction_cross_language_json_test.go
spark/common/uuids/: uuids.go  uuids_test.go
spark/proto/common/: common.pb.go
spark/proto/dkg/: dkg.pb.go  dkg_grpc.pb.go
spark/proto/frost/: frost.pb.go  frost.pb.validate.go  frost_grpc.pb.go
spark/proto/gossip/: gossip.pb.go  gossip.pb.validate.go  gossip_grpc.pb.go
spark/proto/mock/: mock.pb.go  mock_grpc.pb.go
spark/so/: config.go  config_driver_test.go  operator.go
spark/testdata/: partial_token_transaction_hash_cases.json  token_invoice_canonical_encoding_cases.json
(+541 files in other folders)
