[package]
name = "spark-token-primitives-uniffi"
version = "0.1.2"
edition = "2021"

[dependencies]
spark_token_primitives = { package = "spark-token-primitives", path = "../spark-token-primitives" }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.72"
uniffi = { workspace = true }
wasm-bindgen = "0.2.95"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[features]
default = ["uniffi/cli"]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "spark_token_primitives"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
