[package]
name = "spark-token-primitives"
version = "0.1.0"
edition = "2021"
authors = ["Dhruv Pareek <dhruv@lightspark.com>"]
description = "Reusable Rust client helpers for constructing Spark token transfer transactions."
repository = "https://github.com/lightsparkdev/spark"
readme = "README.md"
license = "Apache-2.0"
keywords = ["bitcoin", "spark", "token"]
categories = ["cryptography::cryptocurrencies"]
include = [
    "src/**",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "protos/common.proto",
    "protos/spark.proto",
    "protos/spark_token.proto",
    "protos/multisig.proto",
    "protos/validate/validate.proto",
]

[dependencies]
bech32 = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
base64 = "0.22.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.132"
time = { version = "0.3.37", features = ["parsing", "formatting"] }

[build-dependencies]
prost-build = { workspace = true }

[lib]
name = "spark_token_primitives"
doctest = false
